# of_runtime_actor

./: README.md  运行方法.md
Ec_WispFlow/: CMakeLists.txt  README.en.md  README.md
Ec_WispFlow/cmake/: proto2cpp.cmake  third_party.cmake
Ec_WispFlow/oneflow/core/actor/: actor.cpp  actor.h  actor_message.cpp  actor_message.h  actor_message_bus.cpp  actor_message_bus.h  normal_forward_compute_actor.cpp  normal_forward_compute_actor.h  source_tick_compute_actor.cpp  source_tick_compute_actor.h
Ec_WispFlow/oneflow/core/common/: balanced_splitter.h  blocking_counter.h  data_type.h  global.h  id_util.h  json_util.h  maybe.h  protobuf.cpp  protobuf.h  range.cpp  shape.cpp  shape.h  shape_vec.h  type_traits.h  util.cpp  util.h
Ec_WispFlow/oneflow/core/framework/: device_register_cpu.h  device_registry.cpp  device_registry.h  dtype.cpp  dtype.h  to_string.cpp
Ec_WispFlow/oneflow/core/graph/: compute_task_node.cpp  compute_task_node.h  exec_graph.cpp  exec_graph.h  graph.h  id_serialization.cpp  normal_forward_compute_task_node.h  op_graph.cpp  op_graph.h  task_graph.cpp  task_graph.h  task_node.cpp  task_node.h
Ec_WispFlow/oneflow/core/graph_impl/: normal_forward_compute_task_node.cpp  source_tick_compute_task_node.cpp
Ec_WispFlow/oneflow/core/job/: compiler.cpp  compiler.h  id_manager.cpp  id_manager.h  job_desc.cpp  job_desc.h  oneflow.cpp  oneflow.h  parallel_desc.h  plan.proto  plan_util.cpp  plan_util.h  runtime.cpp  runtime.h  (+5 more)
Ec_WispFlow/proto/: job_before_compilecurjobonmaster_0.txt  job_before_compilecurjobonmaster_1.txt  job_before_compilecurjobonmaster_2.txt  job_compilecurjobonmaster_0.txt  job_compilecurjobonmaster_1.txt  job_compilecurjobonmaster_2.txt  job_makemainjob.txt  job_set_proto.txt  plan_GenCollectiveBoxingPlan_0.txt  plan_GenCollectiveBoxingPlan_1.txt  plan_GenCollectiveBoxingPlan_2.txt  plan_proto.txt
Ec_WispFlow/test/: job_set.prototxt  plan.prototxt  test_job.cpp  test_runtime.cpp
Ec_WispFlow/tools/: prepare_project.py
(+45 files in other folders)
